# OurPaintDCM

./: .clang-format  .gitmodules  Arc_8h.html  Arc_8h.js  Arc_8h__dep__incl.map  Arc_8h__dep__incl.md5  Arc_8h__incl.map  Arc_8h__incl.md5  Arc_8h_source.html  CMakeLists.txt  Circle_8h.html  Circle_8h.js  Circle_8h__dep__incl.map  Circle_8h__dep__incl.md5  Circle_8h__incl.map  Circle_8h__incl.md5  Circle_8h_source.html  Components_8h.html  Components_8h.js  Components_8h__dep__incl.map  Components_8h__dep__incl.md5  Components_8h__incl.map  Components_8h__incl.md5  Components_8h_source.html  DCMManager_8cpp.html  DCMManager_8cpp.js  DCMManager_8cpp__incl.map  DCMManager_8cpp__incl.md5  DCMManager_8h.html  DCMManager_8h.js  DCMManager_8h__dep__incl.map  DCMManager_8h__dep__incl.md5  DCMManager_8h__incl.map  DCMManager_8h__incl.md5  DCMManager_8h_source.html  Doxyfile  Enums_8h.html  Enums_8h.js  Enums_8h__dep__incl.map  Enums_8h__dep__incl.md5  (+1240 more)
.github/workflows/: doc.yml  workflow.yml
app/: CMakeLists.txt  main.cpp
headers/: DCMManager.h  GlobalRequirementManager.h
headers/Figures/: Circle.h  Line.h  Point2D.h  PointBase.h
headers/Requirements/: Enums.h  Requirements.h
headers/figures/: Arc.h  Circle.h  GeometryDependencyIndex.h  GeometryGraphBuilder.h  GeometryStorage.h  Line.h  Point2D.h  PointBase.h
headers/functions/: RequirementFunction.h  RequirementFunctionFactory.h
headers/requirements/: Components.h  Requirements.h
headers/system/: RequirementFunctionSystem.h  RequirementSystem.h
headers/utils/: Enums.h  FigureData.h  FigureDescriptor.h  ID.h  IDGenerator.h  RequirementData.h  RequirementDescriptor.h
scripts/: run_valgrind_all.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+71 more)
src/: DCMManager.cpp  GlobalRequirementManager.cpp
src/Requirements/: Requirements.cpp
src/figures/: GeometryDependencyIndex.cpp  GeometryGraphBuilder.cpp  GeometryStorage.cpp
src/functions/: RequirementFunction.cpp  RequirementFunctionFactory.cpp
src/system/: RequirementFunctionSystem.cpp  RequirementSystem.cpp
tests/: CMakeLists.txt  DCMManagerGTEST.cpp  DCMManagerSolveGTEST.cpp  DragOptimizersBenchmarkGTEST.cpp
tests/Figures/: ArcGTEST.cpp  CircleGTEST.cpp  GeometryStorageBenchmark.cpp  GeometryStorageGTEST.cpp  LineGTEST.cpp  Point2DGTEST.cpp  PointBaseGTEST.cpp
tests/GlobalRequirementManager/: GRMConstructorGTEST.cpp  GRMRequirementsGTEST.cpp  GRMSolveModeGTEST.cpp
tests/Requirements/: LineCircleDistGTEST.cpp  LineHorizontalGTEST.cpp  LineLineAngleGTEST.cpp  LineLineParallelGTEST.cpp  LineLinePerpendicularGTEST.cpp  LineVerticalGTEST.cpp  PointLineDistGTEST.cpp  PointOnLineGTEST.cpp  PointOnPointGTEST.cpp  PointPointDistGTEST.cpp
tests/System/: FixRequirementSystemGTEST.cpp  RequirementFunctionSystemGTEST.cpp  RequirementSystemGTEST.cpp
tests/Utils/: FigureDescriptorGTEST.cpp  FiguresDataGTEST.cpp  IDGTEST.cpp  IDGeneratorGTEST.cpp  RequirementDataGTEST.cpp  RequirementDescriptorGTEST.cpp
tests/function/: FixCoordinateFunctionGTEST.cpp  RequirementFunctionFactoryGTEST.cpp  RequirementFunctionGTEST.cpp
